# ProcessosEstocasticos

./: PE.ipynb  QueuesSimulations.ipynb  README.md
Codigos/: README.md
core-scheduling/: pyproject.toml  simulation.py
